...
                VStack(spacing: 15) {
                    CustomButton(
                        title: StringConsatnts.signUpButtonTitle,
                        textColor: .white,
                        background: Color(.darkGray), isEnabled: true){
                            router.push(.signUp)
                        }.accessibilityIdentifier("signUpButton")
                    CustomButton(
                        title: StringConsatnts.signInButtonTitle,
                        textColor: .white,
                        background: LinearGradient(
                            gradient: Gradient(colors: [Color.orange, Color.red]),
                            startPoint: .leading,
                            endPoint: .trailing
                        ), isEnabled: true) {
                            router.push(.logIn)
                        }.accessibilityIdentifier("signInButton")
                    
                }
            }
            .padding(.horizontal, 30)
            Spacer()
        }
...
